# entity/student.go
@@ -1,5 +1,7 @@
 package entity
 
+import "time"
+
 type Student struct {
 	Id             int
 	PasswordDigest string
@@ -8,4 +10,11 @@ type Student struct {
 	IsStudent      bool
 	IsCompany      bool
 	IsUniversity   bool
+	UniversityId   int
+	FirstName      string
+	LastName       string
+	MiddleName     string
+	PhoneNumber    string
+	CreatedAt      time.Time
+	UpdatedAt      time.Time
 }
